# GraphicEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Canvas.h  HSVpalette.h  Makefile  README.md  SaveWindow.h  Surface.h  ToolBucket.cpp  ToolBucket.h  ToolButton.cpp  ToolButton.h  ToolCanvas.h  ToolCommand.h  ToolEraser.cpp  ToolHorizontalScrollBar.h  ToolManager.h  ToolPaint.cpp  ToolPalette.h  event_handler  main.cpp
.VSCodeCounter/2023-07-30_16-06-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-31_22-55-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  (+3 more)
Plugins/: CMakeLists.txt  Circle.hpp  Interpolator.cpp  Interpolator.hpp  Paint.cpp  Paint.hpp  Ring.hpp
PythonPlugins/: conv_plugin.py  convolution.py  my_plugin.py
lib/Custom_Library/: CMakeLists.txt
lib/Custom_Library/ToolLibrary/: ToolLibrary.hpp
lib/Custom_Library/ToolLibrary/include/Options/: ToolColor.hpp  ToolImage.hpp
lib/Custom_Library/ToolLibrary/include/ToolManager/: ToolManager.hpp  ToolManagerO.hpp  ToolPalette.hpp
lib/Custom_Library/ToolLibrary/include/WidgetCreator/: WidgetCreator.hpp
lib/Custom_Library/ToolLibrary/include/Widgets/: ToolButton.hpp  ToolCanvas.hpp  ToolHorizontalScrollBar.hpp  ToolLabel.hpp
lib/Custom_Library/ToolLibrary/src/Event/: ToolEvent.cpp
lib/Custom_Library/ToolLibrary/src/Options/: ToolColor.cpp  ToolImage.cpp
lib/Custom_Library/ToolLibrary/src/PluginFunctions/: plugin_function.cpp
lib/Custom_Library/ToolLibrary/src/ToolManager/: ToolManager.cpp
lib/Custom_Library/ToolLibrary/src/WidgetCreator/: WidgetCreator.cpp
lib/Custom_Library/ToolLibrary/src/Widgets/: ToolButton.cpp  ToolEditor.cpp  ToolHorizontalScrollBar.cpp  ToolLabel.cpp
lib/Custom_Library/include/HistoryManager/: HistoryManager.hpp  HistoryWindow.hpp  Memento.hpp  Node.hpp  NodeButton.hpp
lib/Custom_Library/include/Widgets/: Canvas.hpp  ColorPicker.hpp  HSVpalette.hpp  Surface.hpp
lib/Custom_Library/include/Windows/: HSVwindow.hpp  OpenWindow.hpp  SaveWindow.hpp
lib/Custom_Library/src/HistoryManager/: HistoryManager.cpp  HistoryWindow.cpp  Memento.cpp  Node.cpp  NodeButton.cpp
lib/Custom_Library/src/Widgets/: Canvas.cpp  ColorPicker.cpp  HSVpalette.cpp  Surface.cpp
lib/Custom_Library/src/Windows/: HSVwindow.cpp  OpenWindow.cpp  SaveWindow.cpp
lib/ToolLibrary/: CMakeLists.txt  ToolLibrary.hpp
lib/ToolLibrary/include/Constants/: Constants.hpp
lib/ToolLibrary/include/Options/: ToolImage.hpp
lib/ToolLibrary/include/ToolManager/: ToolManager.hpp  ToolPalette.hpp
lib/ToolLibrary/include/WidgetCreator/: WidgetCreator.hpp
lib/ToolLibrary/include/Widgets/: ToolButton.hpp  ToolEditor.hpp  ToolHorizontalScrollBar.hpp  ToolLabel.hpp
lib/ToolLibrary/src/Event/: ToolEvent.cpp
lib/ToolLibrary/src/Options/: ToolColor.cpp  ToolImage.cpp
lib/ToolLibrary/src/ToolManager/: ToolManager.cpp
lib/ToolLibrary/src/WidgetCreator/: WidgetCreator.cpp
lib/ToolLibrary/src/Widgets/: ToolButton.cpp  ToolEditor.cpp  ToolHorizontalScrollBar.cpp  ToolLabel.cpp
src/: Canvas.h  ColorPicker.h  HSVpalette.h  HSVwindow.h  Interpolator.cpp  Interpolator.h  Makefile  OpenWindow.h  SaveWindow.h  Style.py  Surface.h  Tool.h  ToolButton.h  ToolCanvas.h  ToolCommand.h  ToolEraser.h  ToolEyeDropper.cpp  ToolEyeDropper.h  ToolHorizontalScrollBar.h  ToolManager.cpp  ToolManager.h  ToolPaint.h  ToolPalette.h  event_handler  hui.py  m.cpp  main.cpp  main.py  my_plugin.py  plugin_func.cpp
src/Custom_Library/: CMakeLists.txt  main.cpp
src/Custom_Library/Additional_Widgets/: Canvas.cpp  Canvas.hpp  HSVpalette.hpp  Surface.hpp
src/Custom_Library/Event/: Event.cpp  Event.hpp
src/Custom_Library/HistoryManager/: HistoryManager.hpp  HistoryWindow.hpp  NodeButton.hpp
src/Custom_Library/Options/: Color.cpp  Color.hpp  Image.cpp  Image.hpp
src/Custom_Library/Tool/: Tool.hpp  ToolCommand.hpp  ToolManager.cpp  ToolManager.hpp  plugin_function.cpp
src/Custom_Library/ToolLibrary/: CMakeLists.txt  ToolLibrary.hpp
src/Custom_Library/ToolLibrary/include/Constants/: Constants.hpp
src/Custom_Library/ToolLibrary/include/Event/: ToolEvent.hpp
src/Custom_Library/ToolLibrary/include/EventSystem/: ToolEvent.hpp
src/Custom_Library/ToolLibrary/include/Options/: ToolColor.hpp  ToolImage.hpp
src/Custom_Library/ToolLibrary/include/ToolManager/: ToolManager.hpp
src/Custom_Library/ToolLibrary/include/WidgetCreator/: WidgetCreator.hpp
src/Custom_Library/ToolLibrary/include/Widgets/: ToolEditor.hpp  ToolHorizontalScrollBar.hpp
src/Custom_Library/ToolLibrary/src/Event/: ToolEvent.cpp
src/Custom_Library/ToolLibrary/src/Options/: ToolImage.cpp
src/Custom_Library/ToolLibrary/src/ToolManager/: ToolManager.cpp  ToolManagerO.cpp
src/Custom_Library/ToolLibrary/src/WidgetCreator/: WidgetCreator.cpp
src/Custom_Library/ToolLibrary/src/Widgets/: ToolButton.cpp  ToolEditor.cpp  ToolHorizontalScrollBar.cpp  ToolLabel.cpp
src/Custom_Library/Widgets/: ToolButton.cpp  ToolButton.hpp  ToolCanvas.hpp  ToolEditor.hpp  ToolHorizontalScrollBar.hpp  ToolPalette.hpp
src/Custom_Library/Windows/: ColorPicker.cpp  ColorPicker.hpp  HSVpalette.cpp  HSVwindow.cpp  HSVwindow.hpp  OpenWindow.cpp  OpenWindow.hpp  SaveWindow.cpp  SaveWindow.hpp
src/Custom_Library/class/: class.cpp  class.hpp
src/Custom_Library/include/HistoryManager/: HistoryManager.hpp  HistoryWindow.hpp  NodeButton.hpp
src/Custom_Library/include/Widgets/: Canvas.hpp  CanvasO.hpp  ColorPicker.hpp  HSVpalette.hpp  Surface.hpp
src/Custom_Library/src/HistoryManager/: HistoryManager.cpp
src/Custom_Library/src/Widgets/: Canvas.cpp  CanvasO.cpp  HSVpalette.cpp
src/Custom_Library/src/Windows/: ColorPicker.cpp  OpenWindow.cpp  SaveWindow.cpp
src/Plugins/: =0.13.1+cu117  CMakeLists.txt  Circle.h  Interpolator.cpp  Interpolator.h  Smoothing.cpp  Style.py  ToolBucket.cpp  ToolBucket.h  ToolConv.h  ToolEraser.h  ToolEyeDropper.cpp  ToolEyeDropper.h  ToolPaint.h  ToolStyle.cpp  ToolStyle.h  main.py  my_plug.py  optionals.h  plugin_func.cpp  pyplug.cpp  standalone-pyplug.cpp
(+154 files in other folders)
